--- a/skaia/nginx/default.conf
+++ b/skaia/nginx/default.conf
@@ -49,6 +49,7 @@ server {
 
     # SPA fallback - serve index.html for unmatched routes
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html =404;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 }
