--- a/skaia/nginx/Dockerfile
+++ b/skaia/nginx/Dockerfile
@@ -17,6 +17,10 @@ COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 # Copy built assets
 COPY --from=builder /app/dist /usr/share/nginx/html
 
+# Fix permissions so nginx user can read files
+RUN chmod -R 755 /usr/share/nginx/html && \
+    find /usr/share/nginx/html -type f -exec chmod 644 {} \;
+
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
