--- a/skaia/package.json
+++ b/skaia/package.json
@@ -14,16 +14,19 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "lodash": "^4.17.23",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.1"
+    "react-router-dom": "^7.13.1",
+    "reactjs-tiptap-editor": "^0.3.31"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
+    "@types/lodash": "^4.17.24",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
