--- a/skaia/package.json
+++ b/skaia/package.json
@@ -14,6 +14,7 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@tiptap/starter-kit": "^3.20.0",
     "lodash": "^4.17.23",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
