--- a/skaia/package.json
+++ b/skaia/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tiptap/starter-kit": "^3.20.0",
+    "jotai": "^2.18.0",
     "lodash": "^4.17.23",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
